--- a/src/partials/maps.html
+++ b/src/partials/maps.html
@@ -1,4 +1,4 @@
-<section class="maps">
+<section class="maps cut">
   <div class="maps__body container-new">
     <div class="maps__title-container">
       <h2 class="maps__title">Maps</h2>
