--- a/src/sass/components/_maps.scss
+++ b/src/sass/components/_maps.scss
@@ -1,4 +1,5 @@
 .maps {
+  position: relative;
   background: linear-gradient(
     to bottom,
     var(--light) 113px,
@@ -6,6 +7,35 @@
   );
   background-size: cover;
   background-repeat: no-repeat;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    @media screen and (min-width: 882px) {
+      display: block;
+      width: var(--cutting-element-width);
+      height: 113px;
+      background-color: var(--red);
+
+      background: linear-gradient(
+        -135deg,
+        var(--transparent) 79px,
+        var(--light) 79px
+      );
+    }
+    @media screen and (min-width: 1440px) {
+      height: 140px;
+      background: linear-gradient(
+        -135deg,
+        var(--transparent) 99px,
+        var(--light) 99px
+      );
+    }
+  }
+
   @media screen and (min-width: 882px) {
     background: linear-gradient(
       to bottom,
