--- a/src/partials/guns.html
+++ b/src/partials/guns.html
@@ -1,6 +1,6 @@
 <section class="guns decorated-section cut">
   <div class="guns__body container-new">
-    <div class="decorated-title agents-title-container">
+    <div class="decorated-title guns-title-container">
       <h2 class="guns__title">Guns</h2>
       <p class="guns__title-copy">Guns</p>
     </div>
