--- a/src/sass/components/_guns.scss
+++ b/src/sass/components/_guns.scss
@@ -69,6 +69,13 @@
 .agents__title-copy {
 }
 .guns__text-visible {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: calc(16 / 13);
+  width: 238px;
+  color: #ece8e1;
 }
 .guns__button {
   @include button(var(--lightred), var(--transparent), var(--light));
