--- a/src/sass/components/_guns.scss
+++ b/src/sass/components/_guns.scss
@@ -3,14 +3,28 @@
 }
 
 .guns__body {
+  position: relative;
+  overflow: hidden;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    left: 50%;
+    top: 50%;
+    opacity: 0.2;
+
+    background: url('./../images/Guns-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 200%;
+    transform: rotate(-15deg) translate(-25%, -40%);
+  }
 }
 .container-new {
 }
 .decorated-title {
-}
-.agents-title-container {
-}
-.agents__title {
 }
 
 .guns-title-container {
@@ -66,8 +80,6 @@
   }
 }
 
-.agents__title-copy {
-}
 .guns__text-visible {
   font-family: 'Source Sans Pro';
   font-style: normal;
