--- a/src/sass/components/_guns.scss
+++ b/src/sass/components/_guns.scss
@@ -5,6 +5,8 @@
 .guns__body {
   position: relative;
   overflow: hidden;
+  border-top: 7px;
+  padding-bottom: 115px;
 
   &::after {
     content: '';
@@ -13,13 +15,14 @@
     height: 200%;
     left: 50%;
     top: 50%;
-    opacity: 0.2;
+    opacity: 0.1;
 
     background: url('./../images/Guns-bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
+    mix-blend-mode: color-dodge;
     background-size: 200%;
-    transform: rotate(-15deg) translate(-25%, -40%);
+    transform: rotate(-15deg) translate(-17%, -50%);
   }
 }
 .container-new {
@@ -30,7 +33,7 @@
 .guns-title-container {
   width: fit-content;
   margin: 0 auto;
-  margin-bottom: 27px;
+  margin-bottom: 45px;
   position: relative;
   @media screen and (min-width: 882px) {
     margin-left: 0;
@@ -88,9 +91,11 @@
   line-height: calc(16 / 13);
   width: 238px;
   color: #ece8e1;
+  margin-bottom: 62px;
 }
 .guns__button {
   @include button(var(--lightred), var(--transparent), var(--light));
+  margin: 0 auto;
 }
 
 .guns__text-hidden {
