--- a/src/partials/guns.html
+++ b/src/partials/guns.html
@@ -1,33 +1,38 @@
 <section class="guns decorated-section cut">
   <div class="guns__body container-new">
-    <div class="decorated-title guns-title-container">
-      <h2 class="guns__title">Guns</h2>
-      <p class="guns__title-copy">Guns</p>
+    <div class="decoration-div">
+      <div class="decorated-title guns-title-container">
+        <h2 class="guns__title">Guns</h2>
+        <p class="guns__title-copy">Guns</p>
+      </div>
+      <p class="guns__text-visible">
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+        <br />
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+      </p>
+      <a href="#" class="guns__button">Guns</a>
+      <p class="guns__text-hidden">
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+        <br />
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+      </p>
+      <p class="guns__aside decorated-aside">Guns</p>
     </div>
-    <p class="guns__text-visible">
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush. <br />
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush.
-    </p>
-    <a href="#" class="guns__button">Guns</a>
-    <p class="guns__text-hidden">
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush. <br />
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush.
-    </p>
   </div>
 </section>
