--- a/src/sass/components/_guns.scss
+++ b/src/sass/components/_guns.scss
@@ -8,21 +8,63 @@
   border-top: 7px;
   padding-bottom: 115px;
 
+  //   &::before {
+  //     content: '';
+  //     display: none;
+  //     position: absolute;
+  //     top: var(--second-pseudoelement-top);
+  //     right: calc(var(--second-pseudoelement-right) - 9px);
+  //     width: 2px;
+  //     background-color: var(--light);
+  //     height: var(--second-pseudoelement-h);
+  //     height: var(--second-pseudoelement-height);
+  //     @media screen and (min-width: 882px) {
+  //       display: block;
+  //     }
+  //   }
+
+  //   &::after {
+  //     content: '';
+  //     position: absolute;
+  //     width: 200%;
+  //     height: 200%;
+  //     left: 50%;
+  //     top: 50%;
+  //     opacity: 0.1;
+
+  //     background: url('./../images/Guns-bg.jpg');
+  //     background-position: center;
+  //     background-repeat: no-repeat;
+  //     mix-blend-mode: color-dodge;
+  //     background-size: 180%;
+  //     transform: rotate(-16deg) translate(-15%, -53%);
+  //   }
+
+  &::before {
+    content: '';
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: var(--first-pseudoelement-left);
+    width: 2px;
+    background-color: var(--light);
+    height: var(--first-pseudoelement-height);
+    @media screen and (min-width: 882px) {
+      display: block;
+    }
+  }
   &::after {
     content: '';
+    display: none;
     position: absolute;
-    width: 200%;
-    height: 200%;
-    left: 50%;
-    top: 50%;
-    opacity: 0.1;
-
-    background: url('./../images/Guns-bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    mix-blend-mode: color-dodge;
-    background-size: 180%;
-    transform: rotate(-16deg) translate(-15%, -53%);
+    top: var(--first-pseudoelement-top);
+    left: var(--first-pseudoelement-left);
+    width: var(--first-pseudoelement-width);
+    background-color: var(--light);
+    height: 2px;
+    @media screen and (min-width: 882px) {
+      display: block;
+    }
   }
 }
 .container-new {
@@ -100,4 +142,60 @@
 
 .guns__text-hidden {
   display: none;
+}
+
+.guns__aside {
+  display: none;
+  position: absolute;
+  right: 50px;
+  bottom: 10px;
+  writing-mode: vertical-lr;
+  width: fit-content;
+  transform: rotate(-180deg);
+  @media screen and (min-width: 882px) {
+    display: block;
+
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: calc(30 / 24);
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+
+    color: var(--white);
+  }
+}
+
+.decoration-div {
+  &::before {
+    content: '';
+    display: none;
+    position: absolute;
+    top: var(--second-pseudoelement-top);
+    right: calc(var(--second-pseudoelement-right) - 9px);
+    width: 2px;
+    background-color: var(--light);
+    height: var(--second-pseudoelement-h);
+    height: var(--second-pseudoelement-height);
+    @media screen and (min-width: 882px) {
+      display: block;
+    }
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    left: 50%;
+    top: 50%;
+    opacity: 0.1;
+
+    background: url('./../images/Guns-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    mix-blend-mode: color-dodge;
+    background-size: 180%;
+    transform: rotate(-16deg) translate(-15%, -53%);
+  }
 }
