--- a/src/sass/components/_guns.scss
+++ b/src/sass/components/_guns.scss
@@ -1,5 +1,34 @@
 .guns {
   background-color: var(--dark);
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: none;
+    @media screen and (min-width: 882px) {
+      display: block;
+      width: var(--cutting-element-width);
+      height: 113px;
+      background-color: var(--red);
+
+      background: linear-gradient(
+        -135deg,
+        var(--transparent) 79px,
+        var(--light) 79px
+      );
+    }
+    @media screen and (min-width: 1440px) {
+      height: 140px;
+      background: linear-gradient(
+        -135deg,
+        var(--transparent) 99px,
+        var(--light) 99px
+      );
+    }
+  }
 }
 
 .guns__body {
@@ -7,38 +36,6 @@
   overflow: hidden;
   border-top: 7px;
   padding-bottom: 115px;
-
-  //   &::before {
-  //     content: '';
-  //     display: none;
-  //     position: absolute;
-  //     top: var(--second-pseudoelement-top);
-  //     right: calc(var(--second-pseudoelement-right) - 9px);
-  //     width: 2px;
-  //     background-color: var(--light);
-  //     height: var(--second-pseudoelement-h);
-  //     height: var(--second-pseudoelement-height);
-  //     @media screen and (min-width: 882px) {
-  //       display: block;
-  //     }
-  //   }
-
-  //   &::after {
-  //     content: '';
-  //     position: absolute;
-  //     width: 200%;
-  //     height: 200%;
-  //     left: 50%;
-  //     top: 50%;
-  //     opacity: 0.1;
-
-  //     background: url('./../images/Guns-bg.jpg');
-  //     background-position: center;
-  //     background-repeat: no-repeat;
-  //     mix-blend-mode: color-dodge;
-  //     background-size: 180%;
-  //     transform: rotate(-16deg) translate(-15%, -53%);
-  //   }
 
   &::before {
     content: '';
@@ -66,10 +63,6 @@
       display: block;
     }
   }
-}
-.container-new {
-}
-.decorated-title {
 }
 
 .guns-title-container {
@@ -134,14 +127,65 @@
   width: 238px;
   color: #ece8e1;
   margin-bottom: 62px;
+  @media screen and (min-width: 882px) {
+    margin-left: 0;
+    padding-left: 38px;
+    width: 380px;
+    margin-bottom: 65px;
+    font-size: 16px;
+    line-height: calc(25 / 20);
+  }
+  @media screen and (min-width: 1440px) {
+    margin-left: 0;
+    padding-left: 38px;
+    width: 640px;
+    margin-bottom: 100px;
+    font-size: 20px;
+    line-height: calc(25 / 20);
+  }
 }
 .guns__button {
   @include button(var(--lightred), var(--transparent), var(--light));
   margin: 0 auto;
+  @media screen and (min-width: 882px) {
+    display: block;
+    margin-left: 100px;
+
+    margin-bottom: 65px;
+  }
+  @media screen and (min-width: 1440px) {
+    margin-left: 178px;
+    margin-bottom: 100px;
+  }
 }
 
 .guns__text-hidden {
   display: none;
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: calc(16 / 13);
+  width: 238px;
+  color: #ece8e1;
+  margin-bottom: 62px;
+  @media screen and (min-width: 882px) {
+    display: block;
+    margin-left: 0;
+    padding-left: 38px;
+    width: 380px;
+    margin-bottom: 65px;
+    font-size: 16px;
+    line-height: calc(25 / 20);
+  }
+  @media screen and (min-width: 1440px) {
+    margin-left: 0;
+    padding-left: 38px;
+    width: 640px;
+    margin-bottom: 100px;
+    font-size: 20px;
+    line-height: calc(25 / 20);
+  }
 }
 
 .guns__aside {
@@ -196,6 +240,15 @@
     background-repeat: no-repeat;
     mix-blend-mode: color-dodge;
     background-size: 180%;
-    transform: rotate(-16deg) translate(-15%, -53%);
+    transform: rotate(-16deg) translate(-14%, -53%);
+
+    @media screen and (min-width: 882px) {
+      background-size: 120%;
+      transform: rotate(-15deg) translate(-14%, -58%);
+    }
+    @media screen and (min-width: 882px) {
+      background-size: 120%;
+      transform: rotate(-15deg) translate(-27%, -58%);
+    }
   }
 }
