--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,39 +1,61 @@
 <footer class="footer">
   <div class="footer__body container-new">
     <div class="footer__content">
-      <svg class="footer-valorant-logo" width="50" height="42">
-        <use href="images/icons.svg#icon-valorant-logo"></use>
-      </svg>
-      <svg class="footer-rito-logo rito logo" width="89" height="29">
-        <use href="images/icons.svg#icon-rito-logo"></use>
-      </svg>
-      <ul class="footer__socials-list socials-list">
-        <li class="socials-list__item">
-          <svg class="socials-list__icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
+      <div class="footer__icons">
+        <svg class="footer-valorant-logo" width="50" height="42">
+          <use href="images/icons.svg#icon-valorant-logo"></use>
+        </svg>
+        <svg class="footer-rito-logo rito logo" width="89" height="29">
+          <use href="images/icons.svg#icon-rito-logo"></use>
+        </svg>
+        <ul class="footer__socials-list socials-list">
+          <li class="socials-list__item">
+            <svg class="socials-list__icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </li>
+          <li class="socials-list__item">
+            <svg class="socials-list__icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-discord"></use>
+            </svg>
+          </li>
+          <li class="socials-list__item">
+            <svg class="socials-list__icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </li>
+          <li class="socials-list__item">
+            <svg class="socials-list__icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-youtube"></use>
+            </svg>
+          </li>
+          <li class="socials-list__item">
+            <svg class="socials-list__icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
+      <ul class="footer__links">
+        <li class="footer_links-item">
+          <a href="#" class="footer__link">Cookie prefrence</a>
         </li>
-        <li class="socials-list__item">
-          <svg class="socials-list__icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-discord"></use>
-          </svg>
+        <li class="footer_links-item">
+          <a href="#" class="footer__link">Term of service</a>
         </li>
-        <li class="socials-list__item">
-          <svg class="socials-list__icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </li>
-        <li class="socials-list__item">
-          <svg class="socials-list__icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-youtube"></use>
-          </svg>
-        </li>
-        <li class="socials-list__item">
-          <svg class="socials-list__icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
+        <li class="footer_links-item">
+          <a href="#" class="footer__link">Privacy notice</a>
         </li>
       </ul>
+      <div class="footer_esrb-container">
+        <picture>
+          <img
+            class="footer_esrb-image"
+            src="./images/esrb.svg"
+            alt="esrb image"
+          />
+        </picture>
+      </div>
     </div>
   </div>
 </footer>
