--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -56,6 +56,12 @@
           />
         </picture>
       </div>
+      <div class="footer__mobile-bg"></div>
+      <small class="footer__copy"
+        >&#169 2021 Riot Games, Inc. Riot Games, VALORANT, and any associated logos
+        are trademarks, service marks, and/or registered trademarks of Riot
+        Games, Inc.</small
+      >
     </div>
   </div>
 </footer>
