--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,6 +8,7 @@
         <svg class="footer-rito-logo rito logo" width="89" height="29">
           <use href="images/icons.svg#icon-rito-logo"></use>
         </svg>
+        <a href="#" class="footer__download">Download game client</a>
         <ul class="footer__socials-list socials-list">
           <li class="socials-list__item">
             <svg class="socials-list__icon" width="12" height="12">
